# sdk

./: CMakeLists.txt  cmake.sh  sdk.code-workspace
app/: main.c  mygtk.c  test.c
cdcs/: cdcs.c  cdcs_connect.c  cdcs_handle.c  cdcs_heart.c  cdcs_msg.c  cdcs_pb.c  cdcs_protobuf.c  cdcs_signal.c
cdcs/cdcs/: cdcs.c  cdcs_cfg.c  cdcs_dbc.c
deamon/: deamon_main.c
inc/: api.h  leetcode.h  leetcode_msg.h  mycdcs.h  mygtk.h  myprint.h  myzlog.h
inc/cdcs/: cdcs_api.h  cdcs_msg.h  cdcs_pb.h  cdcs_protobuf.h
lib/: libmysdk.so.1  libmysdk.so.1.1
lib/zlog/: libzlog.so.1
md/: leetcode.md
my/: myzlog.c
src/: ntp.c  sdk.c
src/leetcode/: le_1.c  leetcode.c
